"add css for bigger screen"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="heading">Join our newsletter</h1>
         <p>
           Keep up with our latest collections, exclusive deals, and special
-          offers! <br> We introduce a new collection every week, so stay tuned to
+          offers!  We introduce a new collection every week, so stay tuned to
           snag the hottest items just for you.
         </p>
       </div>
